<resources>
    <string name="app_name">PlanetList</string>
    <string name="action_settings">Settings</string>
    <string name="btn_what_is_it">What is it?</string>
    <string name="message_is_a"> is a </string>
    <string name="planet_symbol">Planet Symbol</string>
    <string name="type_planet">planet</string>
    <string name="type_minor_planet">minor planet</string>
    <string name="what_is_it">Type</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="copyright2">Introduction to Android</string>
    <string name="copyright1">Copyright © 2015</string>
    <string name="version">Version: 0.90</string>
    <string name="legalinfo">Legal information</string>

    <string name="white">white</string>
    <string name="yellow">yellow</string>
    <string name="fuchsia">fuchsia</string>
    <string name="red">red</string>
    <string name="silver">silver</string>
    <string name="gray">gray</string>
    <string name="olive">olive</string>
    <string name="purple">purple</string>
    <string name="maroon">maroon</string>
    <string name="aqua">aqua</string>
    <string name="lime">lime</string>
    <string name="teal">teal</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="navy">navy</string>
    <string name="black">black</string>
    <string name="txt_color">Text Color</string>
    <string name="txt_type">Text Type</string>
    <string name="normal">Normal</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="bold_italic">Bold-Italic</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="list_text_options">Planet list: text options</string>
    <string name="list_ui_options">Planet UI options</string>
    <string name="show_whatis_button">What Is Button</string>
    <string name="show_whatis_button_details">Check to show "What is" button</string>
    <string name="select_txt_color_title">Text color</string>
    <string name="select_txt_type_title">Text type</string>
    <string name="select_txt_color_summary">Select the color of text for the planets</string>
    <string name="select_txt_type_summary">Select the type of text for the planets</string>

    <string-array name="text_color">
        <item>@string/white</item>
        <item>@string/yellow</item>
        <item>@string/fuchsia</item>
        <item>@string/red</item>
        <item>@string/silver</item>
        <item>@string/gray</item>
        <item>@string/olive</item>
        <item>@string/purple</item>
        <item>@string/maroon</item>
        <item>@string/aqua</item>
        <item>@string/lime</item>
        <item>@string/teal</item>
        <item>@string/green</item>
        <item>@string/blue</item>
        <item>@string/navy</item>
        <item>@string/black</item>
    </string-array>

    <integer-array name="color">
        <item>@color/white</item>
        <item>@color/yellow</item>
        <item>@color/fuchsia</item>
        <item>@color/red</item>
        <item>@color/silver</item>
        <item>@color/gray</item>
        <item>@color/olive</item>
        <item>@color/purple</item>
        <item>@color/maroon</item>
        <item>@color/aqua</item>
        <item>@color/lime</item>
        <item>@color/teal</item>
        <item>@color/green</item>
        <item>@color/blue</item>
        <item>@color/navy</item>
        <item>@color/black</item>
    </integer-array>

    <string-array name="text_color_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string-array name="text_type">
        <item>@string/normal</item>
        <item>@string/bold</item>
        <item>@string/italic</item>
        <item>@string/bold_italic</item>
    </string-array>

    <string-array name="text_type_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
