<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.rjokela.planetlist.AboutActivityFragment">

    <TextView
        android:id="@+id/tv_version"
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tv_copyright1"
        android:text="@string/copyright1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_version"
        android:layout_marginLeft="@dimen/margin_indent"
        android:layout_marginStart="@dimen/margin_indent"
        android:layout_marginTop="@dimen/margin_indent"/>

    <TextView
        android:id="@+id/tv_copyright2"
        android:text="@string/copyright2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_copyright1"
        android:layout_marginLeft="@dimen/margin_indent"
        android:layout_marginStart="@dimen/margin_indent"/>

    <Button
        android:id="@+id/button_legalinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/legalinfo"/>

</RelativeLayout>
